timer now stops at 0 with point deduction

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <p>Try to answer the following questions before the timer runs out.</p>
             <div class="timer-container">
                 <div class="timer-count">
-                <p id="timer-text">60</p>
+                <p id="timer-text">Timer</p>
             </div>
             
             <button id="start-button">START</button>
+            <!-- <button id="reset-button">RESET</button> -->
             
             <div class="score-container">
                 <h2><span class="score">Score:0</span></h2>
