--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             
             <button id="start-button">START</button>
-            <!-- <button id="reset-button">RESET</button> -->
+            <button id="reset-button">RESET</button>
             
             <div class="score-container">
                 <h2><span class="score">Score:0</span></h2>
