Timer, score, start and reset button fixed for when time runs out

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <button id="reset-button">RESET</button>
             
             <div class="score-container">
-                <h2><span class="score">Score:0</span></h2>
+                <h2><span class="score">0</span></h2>
             </div>
         </section> 
         <script src="assets/js/script.js"></script>
