can now display first question w/ all answers + full reset

--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 
     <body>
         <header>
-            <h1>Coding Quiz Challange</h1>
+            <h1 class="header-box">Coding Quiz Challange</h1>
         </header>
         <section>
-            <p>Try to answer the following questions before the timer runs out.</p>
-            <div class="timer-container">
-                <div class="timer-count">
+            <div class="text-box">
+                <h3 class="question-box">Try to answer the following questions before the timer runs out.</h3>
+                <button class="answer-box-a">A</button>
+                <button class="answer-box-b">B</button>
+                <button class="answer-box-c">C</button>
+            </div>
+            <div class="timer-count">
                 <p id="timer-text">Timer</p>
             </div>
             
