cleaned up variables and added comments + second question function

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <section>
             <div class="text-box">
                 <h3 class="question-box">Try to answer the following questions before the timer runs out.</h3>
+            </div>
+            <div class="answers">
                 <button class="answer-box-a">A</button>
                 <button class="answer-box-b">B</button>
                 <button class="answer-box-c">C</button>
