--- a/pseudoCode.html
+++ b/pseudoCode.html
@@ -2,8 +2,8 @@
 
 <!-- 1. HTML skeleton  -->
 
-2. When you press the start button, the timer will start and the first 
-question with 4 answer choices (buttons) will appear.
+<!-- 2. When you press the start button, the timer will start and the first 
+question with 4 answer choices (buttons) will appear. -->
 
 3. If:
     -The timer runs out, subtract from total score and apply time penalty. 
