can now display second question, need to work on what happens when wrong answers is selected

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <div class="text-box">
                 <h3 class="question-box">Try to answer the following questions before the timer runs out.</h3>
             </div>
-            <div class="answers">
-                <button class="answer-box-a">A</button>
-                <button class="answer-box-b">B</button>
-                <button class="answer-box-c">C</button>
+            <div class="ans-container">
+                <button id="answerBtn-a">A</button>
+                <button id="answerBtn-b">B</button>
+                <button id="answerBtn-c">C</button>
             </div>
             <div class="timer-count">
                 <p id="timer-text">Timer</p>
