one of the last pushes, buttons disable at right times and score saves to local storage

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             
             <button id="start-button">START</button>
             <button id="reset-button">RESET</button>
+            <button id="submit-button">SUBMIT</button>
             
             <div class="score-container">
                 <h2><span class="score">0</span></h2>
